--- a/ref.bib
+++ b/ref.bib
@@ -27,6 +27,22 @@
   type = {Master {{Thesis}}}
 }
 
+@article{holland_studying_2006,
+  title = {Studying {{Complex Adaptive Systems}}},
+  author = {Holland, John H.},
+  year = {2006},
+  month = mar,
+  volume = {19},
+  pages = {1--8},
+  issn = {1009-6124, 1559-7067},
+  doi = {10.1007/s11424-006-0001-z},
+  abstract = {Complex adaptive systems (cas) \textendash{} systems that involve many components that adapt or learn as they interact \textendash{} are at the heart of important contemporary problems. The study of cas poses unique challenges: Some of our most powerful mathematical tools, particularly methods involving fixed points, attractors, and the like, are of limited help in understanding the development of cas. This paper suggests ways to modify research methods and tools, with an emphasis on the role of computer-based models, to increase our understanding of cas.},
+  file = {/home/ture/Zotero/storage/PJZH78SX/Holland - 2006 - Studying Complex Adaptive Systems.pdf},
+  journal = {Journal of Systems Science and Complexity},
+  language = {en},
+  number = {1}
+}
+
 @inproceedings{lemmens_constructing_2005,
   title = {Constructing an Abalone Game-Playing Agent},
   booktitle = {Bachelor {{Conference Knowledge Engineering}}, {{Universiteit Maastricht}}},
