--- a/doc/proposal/proposal.tex
+++ b/doc/proposal/proposal.tex
@@ -24,7 +24,7 @@
 
 % Grafiken einbinden
 \usepackage{graphicx}
-\graphicspath{{figures/}}
+\graphicspath{{../figures/}}
 
 \usepackage{hyperref}
 % tiefe des Inhaltsverzeichnisses
