--- a/doc/report/ref.bib
+++ b/doc/report/ref.bib
@@ -18,6 +18,15 @@
   journal = {Special Issue on Foundations of Information Processing of TELEMATIK}
 }
 
+@misc{campfireman_campfiremanabalone-boai_2021,
+  title = {Campfireman/{{Abalone}}-{{BoAI}}},
+  author = {{campfireman}},
+  year = {2021},
+  month = jun,
+  abstract = {A Python implementation of the board game Abalone intended to be played by artificial intelligence},
+  copyright = {MIT}
+}
+
 @phdthesis{chorus_implementing_2009,
   title = {Implementing a Computer Player for Abalone Using Alpha-Beta and Monte-Carlo Search},
   author = {Chorus, Pascal},
@@ -78,6 +87,21 @@
   file = {/home/ture/Zotero/storage/6XJJDMJ9/hexagons.html},
   howpublished = {https://www.redblobgames.com/grids/hexagons/},
   language = {en}
+}
+
+@misc{noauthor_ture_nodate,
+  title = {Ture / Abalone},
+  abstract = {GitLab.com},
+  file = {/home/ture/Zotero/storage/5BYMCU37/abalone.html},
+  howpublished = {https://gitlab.com/CampFireMan/abalone},
+  journal = {GitLab},
+  language = {en}
+}
+
+@misc{noauthor_zobrist_nodate,
+  title = {Zobrist {{Hashing}} - {{Chessprogramming}} Wiki},
+  file = {/home/ture/Zotero/storage/E9U4YWBE/Zobrist_Hashing.html},
+  howpublished = {https://www.chessprogramming.org/Zobrist\_Hashing}
 }
 
 @article{ozcan_simple_2004,
